crates/voom-cli/tests/snapshots/profile_envelope__profile_envelope__profile_create.snap
---
source: crates/voom-cli/tests/profile_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "profile",
  "status": "ok",
  "data": {
    "profile": {
      "id": "vp-home-hevc",
      "name": "home-hevc",
      "target_codec": "hevc",
      "encoder": "libx265",
      "crf": 20,
      "preset": "slow",
      "tune": null,
      "codec_profile": "main10",
      "codec_level": null,
      "pixel_format": "yuv420p10le",
      "max_width": null,
      "max_height": null,
      "output_container": "mkv",
      "copy_compatible": false,
      "retired_at": null
    }
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
